radix-transactions/tests/assets/manifest_generator_error_named_intent_cannot_be_used_as_value_kind_1.diag
error: a NamedIntent cannot be used as a value kind
  |
1 | CALL_METHOD
2 |     Address("component_sim1cptxxxxxxxxxfaucetxxxxxxxxx000527798379xxxxxxxxxhkrefh")
3 |     "my_method"
4 |     Array<NamedIntent>()
  |           ^^^^^^^^^^^ cannot be used as a value kind
5 | ;
  |